# backbone-first-moe

./: .gitignore  README.md  plan.md  pyproject.toml
backbone_moe/: __init__.py  evaluation.py  metrics.py  simulator.py
core/memory/: memory_pool.cpp  memory_pool.h
core/model/: model_topology.cpp  model_topology.h
core/parallel/: expert_dispatcher.cpp  expert_dispatcher.h
core/prefetch/: archer_prefetch_handle.cpp  archer_prefetch_handle.h  task_scheduler.cpp
core/python/: py_archer_prefetch.cpp
core/trace/: model_topology.cpp  model_topology.h
core/utils/: cuda_utils.h
demo/: build_workload_prompt_sets.py  download_serving_benchmark_datasets.py  prepare_custom_data.py
demo/experiments/: ROADMAP_MOE_OFFLOADING.md  augment_backbone_cv_oracle_native.py  backbone_analysis.py  backbone_generalization.py  build_offline_store_from_trace.py  dump_expert_stall_profile.py  export_resident_set.py  insight_4_plot.py  insight_4_system_bottleneck.py  plot_backbone_cv.py  plot_expert_stall_profile.py  plot_section5_runtime.py  run_evaluation_sweep.py  (+4 more)
docs/: ROADMAP.md
experiments/: __init__.py
finemoe/: __init__.py
patches/: README.md  finemoe_backbone.patch
results/: RESULTS_SUMMARY.md
tests/: test_adaptive_split_selector.py  test_backbone_evaluation.py  test_backbone_metrics.py  test_backbone_section5.py  test_backbone_workload.py  test_generation_compat.py  test_hf_config.py  test_modulelist_runtime.py  test_observation_analysis.py  test_packed_runtime.py  test_prepare_custom_data.py  test_resident_registry.py  test_runtime_resident_slack.py
(+177 files in other folders)
